tests/paczka1/small_fuzzy/84049904.err
Error in line 12: x7XC A521 2,37
Error in line 2: JnpJjv S854 0,2
